{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 132,
  "lineage": "c2093a42-8d82-fb5c-2ebb-916619a48193",
  "resources": [
    {
      "module": "module.aws_InternetGW[\"IGW01\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025869940381:internet-gateway/igw-0c904ab8e2e238bc0",
            "id": "igw-0c904ab8e2e238bc0",
            "owner_id": "025869940381",
            "tags": {
              "Name": "first_IGW"
            },
            "tags_all": {
              "Name": "first_IGW"
            },
            "vpc_id": "vpc-0a71e4979b6a42fb2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_elastic_ip[\"EIP01\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff9576088b028cf3",
            "domain": "vpc",
            "id": "eipalloc-0ff9576088b028cf3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-20-87-151.compute-1.amazonaws.com",
            "public_ip": "107.20.87.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "first_EIP_for_NAT"
            },
            "tags_all": {
              "Name": "first_EIP_for_NAT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_elastic_ip[\"EIP02\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a09471579e64466",
            "domain": "vpc",
            "id": "eipalloc-02a09471579e64466",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-205-73-203.compute-1.amazonaws.com",
            "public_ip": "54.205.73.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "second_EIP_for_NAT"
            },
            "tags_all": {
              "Name": "second_EIP_for_NAT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_natGW[\"NAT01\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff9576088b028cf3",
            "association_id": "eipassoc-00a259671f69a9e8c",
            "connectivity_type": "public",
            "id": "nat-0c8d9427e5405ca8e",
            "network_interface_id": "eni-091f634e98f6c0785",
            "private_ip": "192.168.16.227",
            "public_ip": "107.20.87.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017923234c783e5fa",
            "tags": {
              "Name": "first_nat"
            },
            "tags_all": {
              "Name": "first_nat"
            }
          },
          "dependencies": [
            "module.aws_elastic_ip.aws_eip.lb",
            "module.aws_subnets.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_natGW[\"NAT02\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a09471579e64466",
            "association_id": "eipassoc-06300727c79c7ecf1",
            "connectivity_type": "public",
            "id": "nat-02d8358bd7498a04a",
            "network_interface_id": "eni-0e1b2cd2e662ec559",
            "private_ip": "192.168.101.172",
            "public_ip": "54.205.73.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0958d639b4764a0c7",
            "tags": {
              "Name": "second_nat"
            },
            "tags_all": {
              "Name": "second_nat"
            }
          },
          "dependencies": [
            "module.aws_elastic_ip.aws_eip.lb",
            "module.aws_subnets.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table[\"RT01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025869940381:route-table/rtb-06c6cd6b77bfe4e8c",
            "id": "rtb-06c6cd6b77bfe4e8c",
            "owner_id": "025869940381",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c904ab8e2e238bc0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route_table"
            },
            "tags_all": {
              "Name": "Public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a71e4979b6a42fb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_InternetGW.aws_internet_gateway.gw",
            "module.aws_elastic_ip.aws_eip.lb",
            "module.aws_natGW.aws_nat_gateway.example",
            "module.aws_subnets.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table[\"RT02\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025869940381:route-table/rtb-06a344bc4725ec573",
            "id": "rtb-06a344bc4725ec573",
            "owner_id": "025869940381",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c8d9427e5405ca8e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "first_private_route_table"
            },
            "tags_all": {
              "Name": "first_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a71e4979b6a42fb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_InternetGW.aws_internet_gateway.gw",
            "module.aws_elastic_ip.aws_eip.lb",
            "module.aws_natGW.aws_nat_gateway.example",
            "module.aws_subnets.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table[\"RT03\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025869940381:route-table/rtb-0dfbd8e432ea5b967",
            "id": "rtb-0dfbd8e432ea5b967",
            "owner_id": "025869940381",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02d8358bd7498a04a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "second_private_route_table"
            },
            "tags_all": {
              "Name": "second_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a71e4979b6a42fb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_InternetGW.aws_internet_gateway.gw",
            "module.aws_elastic_ip.aws_eip.lb",
            "module.aws_natGW.aws_nat_gateway.example",
            "module.aws_subnets.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association[\"RTassoc01\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049bb3eaff305d07d",
            "route_table_id": "rtb-06c6cd6b77bfe4e8c",
            "subnet_id": "subnet-017923234c783e5fa"
          },
          "dependencies": [
            "module.aws_InternetGW.aws_internet_gateway.gw",
            "module.aws_elastic_ip.aws_eip.lb",
            "module.aws_natGW.aws_nat_gateway.example",
            "module.aws_route_table.aws_route_table.example",
            "module.aws_subnets.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association[\"RTassoc02\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bdfe9a32368741c",
            "route_table_id": "rtb-06c6cd6b77bfe4e8c",
            "subnet_id": "subnet-0958d639b4764a0c7"
          },
          "dependencies": [
            "module.aws_InternetGW.aws_internet_gateway.gw",
            "module.aws_elastic_ip.aws_eip.lb",
            "module.aws_natGW.aws_nat_gateway.example",
            "module.aws_route_table.aws_route_table.example",
            "module.aws_subnets.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association[\"RTassoc03\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0239f862edd66174a",
            "route_table_id": "rtb-06a344bc4725ec573",
            "subnet_id": "subnet-0b911f4c85f3c55c3"
          },
          "dependencies": [
            "module.aws_InternetGW.aws_internet_gateway.gw",
            "module.aws_elastic_ip.aws_eip.lb",
            "module.aws_natGW.aws_nat_gateway.example",
            "module.aws_route_table.aws_route_table.example",
            "module.aws_subnets.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association[\"RTassoc04\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d62c614a5c042bf",
            "route_table_id": "rtb-0dfbd8e432ea5b967",
            "subnet_id": "subnet-09ec032a253fabcd0"
          },
          "dependencies": [
            "module.aws_InternetGW.aws_internet_gateway.gw",
            "module.aws_elastic_ip.aws_eip.lb",
            "module.aws_natGW.aws_nat_gateway.example",
            "module.aws_route_table.aws_route_table.example",
            "module.aws_subnets.aws_subnet.main",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_group[\"SG01\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025869940381:security-group/sg-09afcd1c089ef67b8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09afcd1c089ef67b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mypublicSG",
            "name_prefix": "",
            "owner_id": "025869940381",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mypublicSGs"
            },
            "tags_all": {
              "Name": "mypublicSGs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a71e4979b6a42fb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnets[\"private-us-east-1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025869940381:subnet/subnet-0b911f4c85f3c55c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b911f4c85f3c55c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025869940381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a"
            },
            "tags_all": {
              "Name": "private-us-east-1a"
            },
            "vpc_id": "vpc-0a71e4979b6a42fb2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnets[\"private-us-east-1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025869940381:subnet/subnet-09ec032a253fabcd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ec032a253fabcd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025869940381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b"
            },
            "tags_all": {
              "Name": "private-us-east-1b"
            },
            "vpc_id": "vpc-0a71e4979b6a42fb2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnets[\"public-us-east-1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025869940381:subnet/subnet-017923234c783e5fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017923234c783e5fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025869940381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a"
            },
            "tags_all": {
              "Name": "public-us-east-1a"
            },
            "vpc_id": "vpc-0a71e4979b6a42fb2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnets[\"public-us-east-1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025869940381:subnet/subnet-0958d639b4764a0c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0958d639b4764a0c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025869940381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b"
            },
            "tags_all": {
              "Name": "public-us-east-1b"
            },
            "vpc_id": "vpc-0a71e4979b6a42fb2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc[\"vpc01\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025869940381:vpc/vpc-0a71e4979b6a42fb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-056aaa064ff67905b",
            "default_route_table_id": "rtb-09e19e19273f8f00e",
            "default_security_group_id": "sg-0d5de61129eb3db5e",
            "dhcp_options_id": "dopt-0d1ae28a25fdc090f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a71e4979b6a42fb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e19e19273f8f00e",
            "owner_id": "025869940381",
            "tags": {
              "Name": "first_vpc"
            },
            "tags_all": {
              "Name": "first_vpc"
            }
          }
        }
      ]
    }
  ]
}